--- a/PieShop/PieShop/wwwroot/css/site.css
+++ b/PieShop/PieShop/wwwroot/css/site.css
@@ -73,3 +73,10 @@ body {
 	white-space: nowrap;
 	line-height: 60px; /* Vertically center the text there */
 }
+
+/* Pie Shop
+-------------------------------------------------- */
+
+.pie-description {
+	padding: 5px 10px 5px 10px;
+}
