feat: shopping cart component

--- a/PieShop/PieShop/Views/Home/Index.cshtml
+++ b/PieShop/PieShop/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model HomeViewModel
+
+@{
+	ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+@await Html.PartialAsync("_Carousel")
+
+<h2>Pies of the Week</h2>
+<h4>Out weekly selection - just for you!</h4>
+
+<div class="row">
+	@foreach (var pie in Model.PiesOfTheWeek)
+	{
+		<partial name="_PieOverviewPartial" model="@pie" />
+	}
 </div>
