--- a/PieShop/PieShop/Views/Shared/_Layout.cshtml
+++ b/PieShop/PieShop/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
+	<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
