--- a/PieShop/PieShop/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
+++ b/PieShop/PieShop/Views/Shared/Components/ShoppingCartSummary/Default.cshtml
@@ -4,20 +4,18 @@
 	ViewData["Title"] = "Default";
 }
 
-@if (Model.ShoppingCart.ShoppingCartItems.Count > 0)
-{
-	<li>
-		<a href="#">
-			<ion-icon name="cart-outline"></ion-icon>
-			<span id="cart-status">
+<li class="nav-item">
+	<a class="nav-link text-dark" asp-controller="ShoppingCart" asp-action="Index">
+		<ion-icon name="cart-outline"></ion-icon>
+		<span id="cart-status">
+			@if (Model.ShoppingCart.ShoppingCartItems.Count > 0)
+			{
+
 				@Model.ShoppingCart.ShoppingCartItems.Count
-			</span>
-		</a>
-	</li>
-}
-else
-{
-	<a class="nav-link text-dark">Shopping cart items is empty</a>
-}
+
+			}
+		</span>
+	</a>
+</li>
 
 
