--- a/PieShop/PieShop/Views/ShoppingCart/Index.cshtml
+++ b/PieShop/PieShop/Views/ShoppingCart/Index.cshtml
@@ -37,3 +37,7 @@
 		</tr>
 	</tfoot>
 </table>
+
+<div class="text-center">
+	<a class="btn btn-dark" asp-controller="Order" asp-action="Checkout">Check out now!</a>
+</div>
