--- a/PieShop/PieShop/Views/_ViewImports.cshtml
+++ b/PieShop/PieShop/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using PieShop.Models
 @using PieShop.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper PieShop.TagHelpers.*, PieShop
