--- a/PieShop/PieShop/wwwroot/css/site.css
+++ b/PieShop/PieShop/wwwroot/css/site.css
@@ -63,7 +63,7 @@ html {
 body {
 	/* Margin bottom by footer height */
 	margin-bottom: 60px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 }
 
 .footer {
