--- a/PieShop/PieShop/Views/Shared/_PieOverviewPartial.cshtml
+++ b/PieShop/PieShop/Views/Shared/_PieOverviewPartial.cshtml
@@ -17,7 +17,7 @@
 			<a class="btn btn-dark"
 			   asp-controller="ShoppingCart"
 			   asp-action="AddToShoppingCart"
-			   asp-route-pieId="@Model.Id">
+			   asp-route-id="@Model.Id">
 				Add to Cart
 			</a>
 		</div>
